# jdt-compiler-issue

./: .bazelrc  .gitignore  MODULE.bazel  README.md  WORKSPACE.bzlmod
src/comparitor/: BUILD.bazel
src/comparitor/src/com/example/comparitor/: Main.java  Math.java
src/comparitor/test/com/example/comparitor/: TestMath.java
src/repo/bazel/java/: artifacts.MODULE.bazel  maven.MODULE.bazel  maven_lock.json
